<resources>
    <string name="app_name">FilterVision2</string>
    <string name="red_switch">Red</string>
    <string name="default_switch">Default</string>
    <string name="image_content_description">Image</string>
    <string name="palm_tree_content_description">Palm Tree</string>
    <string name="apply_filter">Apply Filter</string>
    <string name="save_filter">Save Filter</string>
    <string name="default_filters">Default Filters</string>
    <string name="custom_filters">Custom Filters</string>
    <string name="custom_switch1">Purple</string>
    <string name="custom_switch2">Teal</string>
    <string name="select_image">Select Image</string>
    <string name="image1">Palm Tree</string>
    <string name="image2">Mountains</string>
    <string name="apply_image">Apply Image</string>
    <string name="rgb_sliders">RGB Sliders</string>
    <string name="red_slider">R</string>
    <string name="green_slider">G</string>
    <string name="blue_slider">B</string>
    <string name="mountains_select">Mountains</string>
    <string name="palm_tree_select">Palm Tree</string>
    <string name="color_filter">Color Filter</string>
    <string name="default_button">Default</string>
    <string name="red_button">Red</string>
    <string name="green_button">Green</string>
    <string name="blue_button">Blue</string>
    <string name="custom_button">Custom</string>
    <string name="revert">Revert</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>